# django-with-instrumentation

./: .gitignore  README.md
dynatrace-instrumentation/: .env  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  manage.py  pyproject.toml
dynatrace-instrumentation/cluster-and-oneagent-installation/: kind-config.yaml
dynatrace-instrumentation/cluster-and-oneagent-installation/dynatrace-configuration/: dynakube.yaml  values.yaml
dynatrace-instrumentation/cluster-and-oneagent-installation/k8s-manifests/: 0-database-and-broker.yaml  1-secrets-and-configmap.yaml  2-service-and-deployment.yaml
dynatrace-instrumentation/django_template/: asgi.py  settings.py  urls.py  wsgi.py
dynatrace-instrumentation/django_template/apps/dynatrace/: __init__.py  apps.py  consumer.py  log.py  publisher.py
dynatrace-instrumentation/django_template/apps/example/: apps.py  models.py
dynatrace-instrumentation/django_template/apps/example/api/v1/: serializers.py  standard_views.py
dynatrace-instrumentation/django_template/apps/pika/: publisher.py
dynatrace-instrumentation/django_template/apps/pika/management/commands/: pika_consumer.py
dynatrace-instrumentation/django_template/support/: inter_utils.py  logger.py
dynatrace-instrumentation/scripts/: setup-cluster.sh  start-development.sh  start-tests.sh
dynatrace-instrumentation/scripts/consumers/: README.md
dynatrace-instrumentation/tests/: api_conftest.py
dynatrace-instrumentation/tests/apps/: test_urls.py
dynatrace-instrumentation/tests/apps/example/api/: test_global_exception_handler.py
dynatrace-instrumentation/tests/apps/example/api/v1/: test_serializers.py
dynatrace-instrumentation/tests/apps/example/management/commands/: test_seed.py
dynatrace-instrumentation/tests/apps/example/pubsub/: pubsub_conftest.py
dynatrace-instrumentation/tests/apps/example/pubsub/pubsub_logic/: test_create_audit_action.py
(+40 files in other folders)
